--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,4 +34,7 @@
     <color name="list_separator">#EFEFF4</color>
     <color name="black">#000000</color>
 
+    <color name="shimmerColor">#C2C2C2</color>
+
+
 </resources>
