--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -12,7 +12,7 @@
         />
     <item
         android:id="@+id/icEvaluacion"
-        android:icon="@drawable/ic_outline_insert_drive_file_24"
+        android:icon="@drawable/evaluacion"
         android:title="Evaluaciones"
         />
 
